refactor: complete YEKDB sprint 00-17 architecture cleanup