@@ -14,38 +14,32 @@ import java.util.Objects;
 /**
  * Tek bir indeks yapısını temsil eder.
  *
- * <p>Bu sınıf, indeks anahtarları ile kayıtların fiziksel konumlarını
- * gösteren {@link RecordPointer} nesneleri arasındaki ilişkiyi yönetir.</p>
+ * PRIMARY ve UNIQUE indekslerde her anahtar yalnızca bir kez
+ * bulunabilir.
  *
- * <p>PRIMARY ve UNIQUE indekslerde her anahtar yalnızca bir kez bulunabilir.
- * NON_UNIQUE indekslerde ise aynı anahtara birden fazla kayıt adresi
- * bağlanabilir.</p>
+ * NON_UNIQUE indekslerde aynı anahtara birden fazla
+ * RecordPointer bağlanabilir.
  *
- * @param <K> indeks anahtarının veri tipi
+ * @param <K> indeks anahtar tipi
  */
-public class Index<K extends Comparable<K>> implements Serializable {
+public class Index<K extends Comparable<K>>
+        implements Serializable {
 
     private static final long serialVersionUID = 1L;
 
     /**
-     * İndekse ait katalog ve tanımlayıcı bilgiler.
+     * İndekse ait metadata bilgisi.
      */
     private final IndexMetadata metadata;
 
     /**
-     * Anahtar ve kayıt adresi ilişkilerini tutan geçici indeks yapısı.
-     *
-     * <p>B+ Tree altyapısı eklenene kadar bellek içi harita kullanılmaktadır.</p>
+     * B+ Tree implementasyonu gelene kadar kullanılan
+     * bellek içi indeks yapısı.
      */
     private final Map<K, List<RecordPointer>> entries;
 
-    /**
-     * Yeni bir indeks oluşturur.
-     *
-     * @param metadata indeks metadata bilgileri
-     * @throws InvalidIndexException metadata null veya geçersizse
-     */
     public Index(IndexMetadata metadata) {
+
         validateMetadata(metadata);
 
         this.metadata = metadata;
@@ -53,32 +47,42 @@ public class Index<K extends Comparable<K>> implements Serializable {
     }
 
     /**
-     * İndekse yeni bir anahtar ve kayıt adresi ekler.
-     *
-     * @param key indeks anahtarı
-     * @param pointer kaydın fiziksel adresi
-     * @throws InvalidIndexException anahtar veya pointer geçersizse
-     * @throws DuplicateIndexKeyException UNIQUE veya PRIMARY indekste
-     *                                    aynı anahtar zaten bulunuyorsa
+     * Yeni indeks girdisi ekler.
      */
-    public void insert(K key, RecordPointer pointer) {
+    public void insert(
+            K key,
+            RecordPointer pointer
+    ) {
+
         validateKey(key);
         validatePointer(pointer);
 
-        List<RecordPointer> pointers = entries.get(key);
+        List<RecordPointer> pointers =
+                entries.get(key);
 
         if (pointers == null) {
-            List<RecordPointer> newPointers = new ArrayList<>();
+
+            List<RecordPointer> newPointers =
+                    new ArrayList<>();
+
             newPointers.add(pointer);
-            entries.put(key, newPointers);
+
+            entries.put(
+                    key,
+                    newPointers
+            );
+
             return;
         }
 
         if (metadata.getIndexType().isUnique()) {
+
             throw new DuplicateIndexKeyException(
                     "Tekrar eden indeks anahtarı kabul edilmedi. "
-                            + "Index: " + metadata.getIndexName()
-                            + ", key: " + key
+                            + "Index: "
+                            + metadata.getIndexName()
+                            + ", key: "
+                            + key
             );
         }
 
@@ -88,84 +92,80 @@ public class Index<K extends Comparable<K>> implements Serializable {
     }
 
     /**
-     * Bir {@link IndexEntry} nesnesini indekse ekler.
-     *
-     * @param entry eklenecek indeks girdisi
-     * @throws InvalidIndexException entry null veya geçersizse
+     * IndexEntry nesnesi üzerinden kayıt ekler.
      */
     public void insert(IndexEntry<K> entry) {
+
         if (entry == null || !entry.isValid()) {
+
             throw new InvalidIndexException(
                     "Geçerli bir IndexEntry sağlanmalıdır."
             );
         }
 
-        insert(entry.getKey(), entry.getPointer());
-    }
-
-    /**
-     * Verilen anahtara bağlı kayıt adreslerini arar.
-     *
-     * @param key aranacak anahtar
-     * @return kayıt adreslerinin değiştirilemez kopyası;
-     *         anahtar bulunamazsa boş liste
-     */
-    public List<RecordPointer> search(K key) {
-        validateKey(key);
-
-        List<RecordPointer> pointers = entries.get(key);
-
-        if (pointers == null) {
-            return Collections.emptyList();
-        }
-
-        return Collections.unmodifiableList(
-                new ArrayList<>(pointers)
+        insert(
+                entry.getKey(),
+                entry.getPointer()
         );
     }
 
     /**
-     * Anahtarın indeks içerisinde bulunup bulunmadığını kontrol eder.
-     *
-     * @param key kontrol edilecek anahtar
-     * @return anahtar mevcutsa true
+     * Anahtara ait RecordPointer listesini döndürür.
+     */
+    public List<RecordPointer> search(K key) {
+
+        validateKey(key);
+
+        List<RecordPointer> pointers =
+                entries.get(key);
+
+        if (pointers == null) {
+            return List.of();
+        }
+
+        return List.copyOf(pointers);
+    }
+
+    /**
+     * Anahtarın indekste bulunup bulunmadığını kontrol eder.
      */
     public boolean containsKey(K key) {
+
         validateKey(key);
+
         return entries.containsKey(key);
     }
 
     /**
-     * Belirtilen anahtarı ve bu anahtara ait bütün kayıt adreslerini siler.
-     *
-     * @param key silinecek anahtar
-     * @return anahtar bulunduysa ve silindiyse true
+     * Anahtarı ve ona bağlı bütün pointer'ları siler.
      */
     public boolean remove(K key) {
+
         validateKey(key);
+
         return entries.remove(key) != null;
     }
 
     /**
-     * Belirli bir anahtara bağlı tek bir kayıt adresini siler.
-     *
-     * <p>Anahtar altında başka pointer kalmazsa anahtar da indeksten kaldırılır.</p>
-     *
-     * @param key indeks anahtarı
-     * @param pointer silinecek kayıt adresi
-     * @return pointer bulunduysa ve silindiyse true
+     * Anahtara bağlı belirli bir pointer'ı siler.
      */
-    public boolean remove(K key, RecordPointer pointer) {
+    public boolean remove(
+            K key,
+            RecordPointer pointer
+    ) {
+
         validateKey(key);
         validatePointer(pointer);
 
-        List<RecordPointer> pointers = entries.get(key);
+        List<RecordPointer> pointers =
+                entries.get(key);
 
         if (pointers == null) {
             return false;
         }
 
-        boolean removed = pointers.remove(pointer);
+        boolean removed =
+                pointers.remove(pointer);
 
         if (pointers.isEmpty()) {
             entries.remove(key);
@@ -175,29 +175,27 @@ public class Index<K extends Comparable<K>> implements Serializable {
     }
 
     /**
-     * Bir anahtarın işaret ettiği eski kayıt adresini yenisiyle değiştirir.
-     *
-     * @param key indeks anahtarı
-     * @param oldPointer eski kayıt adresi
-     * @param newPointer yeni kayıt adresi
-     * @return eski pointer bulunup güncellendiyse true
+     * Var olan pointer'ı yeni pointer ile değiştirir.
      */
     public boolean update(
             K key,
             RecordPointer oldPointer,
             RecordPointer newPointer
     ) {
+
         validateKey(key);
         validatePointer(oldPointer);
         validatePointer(newPointer);
 
-        List<RecordPointer> pointers = entries.get(key);
+        List<RecordPointer> pointers =
+                entries.get(key);
 
         if (pointers == null) {
             return false;
         }
 
-        int pointerIndex = pointers.indexOf(oldPointer);
+        int pointerIndex =
+                pointers.indexOf(oldPointer);
 
         if (pointerIndex < 0) {
             return false;
@@ -205,71 +203,61 @@ public class Index<K extends Comparable<K>> implements Serializable {
 
         if (pointers.contains(newPointer)
                 && !oldPointer.equals(newPointer)) {
+
             return false;
         }
 
-        pointers.set(pointerIndex, newPointer);
+        pointers.set(
+                pointerIndex,
+                newPointer
+        );
+
         return true;
     }
 
     /**
-     * İndeks içerisindeki bütün anahtar ve pointer ilişkilerini temizler.
+     * Bütün indeks girdilerini temizler.
      */
     public void clear() {
         entries.clear();
     }
 
     /**
-     * İndeksteki farklı anahtar sayısını döndürür.
-     *
-     * @return farklı anahtar sayısı
+     * Farklı anahtar sayısını döndürür.
      */
     public int size() {
         return entries.size();
     }
 
     /**
-     * İndekste tutulan toplam kayıt adresi sayısını döndürür.
-     *
-     * <p>NON_UNIQUE indekslerde bu değer {@link #size()} sonucundan
-     * daha büyük olabilir.</p>
-     *
-     * @return toplam pointer sayısı
+     * Toplam RecordPointer sayısını döndürür.
      */
     public int pointerCount() {
+
         int count = 0;
 
-        for (List<RecordPointer> pointers : entries.values()) {
+        for (List<RecordPointer> pointers
+                : entries.values()) {
+
             count += pointers.size();
         }
 
         return count;
     }
 
-    /**
-     * İndeksin boş olup olmadığını kontrol eder.
-     *
-     * @return indeks boşsa true
-     */
     public boolean isEmpty() {
         return entries.isEmpty();
     }
 
-    /**
-     * İndeks metadata bilgisini döndürür.
-     *
-     * @return indeks metadata bilgisi
-     */
     public IndexMetadata getMetadata() {
         return metadata;
     }
 
     /**
-     * İndeks içerisindeki bütün girdilerin güvenli bir kopyasını döndürür.
-     *
-     * @return değiştirilemez anahtar-pointer haritası
+     * İndeks girdilerinin güvenli kopyasını döndürür.
      */
     public Map<K, List<RecordPointer>> getAllEntries() {
+
         Map<K, List<RecordPointer>> copiedEntries =
                 new LinkedHashMap<>();
 
@@ -278,27 +266,31 @@ public class Index<K extends Comparable<K>> implements Serializable {
 
             copiedEntries.put(
                     entry.getKey(),
-                    Collections.unmodifiableList(
-                            new ArrayList<>(entry.getValue())
+                    List.copyOf(
+                            entry.getValue()
                     )
             );
         }
 
-        return Collections.unmodifiableMap(copiedEntries);
+        return Collections.unmodifiableMap(
+                copiedEntries
+        );
     }
 
     /**
-     * İndeks içerisindeki girdileri düz bir IndexEntry listesi olarak döndürür.
-     *
-     * @return değiştirilemez indeks girdisi listesi
+     * İndeks girdilerini sıralı IndexEntry listesi olarak döndürür.
      */
     public List<IndexEntry<K>> getEntryList() {
-        List<IndexEntry<K>> result = new ArrayList<>();
+
+        List<IndexEntry<K>> result =
+                new ArrayList<>();
 
         for (Map.Entry<K, List<RecordPointer>> mapEntry
                 : entries.entrySet()) {
 
-            for (RecordPointer pointer : mapEntry.getValue()) {
+            for (RecordPointer pointer
+                    : mapEntry.getValue()) {
+
                 result.add(
                         new IndexEntry<>(
                                 mapEntry.getKey(),
@@ -309,31 +301,40 @@ public class Index<K extends Comparable<K>> implements Serializable {
         }
 
         Collections.sort(result);
-        return Collections.unmodifiableList(result);
+
+        return List.copyOf(result);
     }
 
     /**
-     * Metadata bilgisini doğrular.
+     * Metadata bütünlüğünü kontrol eder.
      */
-    private void validateMetadata(IndexMetadata metadata) {
+    private void validateMetadata(
+            IndexMetadata metadata
+    ) {
+
         if (metadata == null) {
+
             throw new InvalidIndexException(
                     "Index metadata null olamaz."
             );
         }
 
         if (!metadata.isValid()) {
+
             throw new InvalidIndexException(
-                    "Geçersiz index metadata: " + metadata
+                    "Geçersiz index metadata: "
+                            + metadata
             );
         }
     }
 
     /**
-     * İndeks anahtarını doğrular.
+     * Anahtar bütünlüğünü kontrol eder.
      */
     private void validateKey(K key) {
+
         if (key == null) {
+
             throw new InvalidIndexException(
                     "Index anahtarı null olamaz."
             );
@@ -341,10 +342,15 @@ public class Index<K extends Comparable<K>> implements Serializable {
     }
 
     /**
-     * Kayıt adresini doğrular.
+     * RecordPointer bütünlüğünü kontrol eder.
      */
-    private void validatePointer(RecordPointer pointer) {
-        if (pointer == null || !pointer.isValid()) {
+    private void validatePointer(
+            RecordPointer pointer
+    ) {
+
+        if (pointer == null
+                || !pointer.isValid()) {
+
             throw new InvalidIndexException(
                     "Geçerli bir RecordPointer sağlanmalıdır."
             );
@@ -353,6 +359,7 @@ public class Index<K extends Comparable<K>> implements Serializable {
 
     @Override
     public String toString() {
+
         return "Index{" +
                 "metadata=" + metadata +
                 ", keyCount=" + size() +
@@ -362,6 +369,7 @@ public class Index<K extends Comparable<K>> implements Serializable {
 
     @Override
     public boolean equals(Object object) {
+
         if (this == object) {
             return true;
         }
@@ -370,12 +378,21 @@ public class Index<K extends Comparable<K>> implements Serializable {
             return false;
         }
 
-        return Objects.equals(metadata, index.metadata)
-                && Objects.equals(entries, index.entries);
+        return Objects.equals(
+                metadata,
+                index.metadata
+        )
+                && Objects.equals(
+                entries,
+                index.entries
+        );
     }
 
     @Override
     public int hashCode() {
-        return Objects.hash(metadata, entries);
+        return Objects.hash(
+                metadata,
+                entries
+        );
     }
 }
