@@ -16,41 +16,40 @@ import java.util.concurrent.atomic.AtomicLong;
 /**
  * YEKDB içerisindeki indeksleri yöneten merkez sınıftır.
  *
- * <p>IndexManager; indeks oluşturma, silme, arama, listeleme
- * ve indeks girdileri üzerinde işlem yapma görevlerini üstlenir.</p>
+ * IndexManager:
+ * - index oluşturma,
+ * - index silme,
+ * - index arama,
+ * - index listeleme,
+ * - index girdileri üzerinde işlem yapma
+ *
+ * görevlerini üstlenir.
  */
 public class IndexManager implements Serializable {
 
     private static final long serialVersionUID = 1L;
 
     /**
-     * Yeni oluşturulacak indeksler için kimlik üretir.
+     * Yeni indeks kimliği üretir.
      */
     private final AtomicLong indexIdGenerator;
 
     /**
-     * İndeks adı ile indeks nesnesi arasındaki ilişkiyi tutar.
+     * Normalize edilmiş index adı ile index nesnesini eşler.
      */
     private final Map<String, Index<?>> indexes;
 
-    /**
-     * Boş bir IndexManager oluşturur.
-     */
     public IndexManager() {
-        this.indexIdGenerator = new AtomicLong(1L);
-        this.indexes = new LinkedHashMap<>();
+
+        this.indexIdGenerator =
+                new AtomicLong(1L);
+
+        this.indexes =
+                new LinkedHashMap<>();
     }
 
     /**
-     * Yeni bir indeks oluşturur.
-     *
-     * @param indexName indeks adı
-     * @param databaseName veritabanı adı
-     * @param tableName tablo adı
-     * @param columnName indekslenecek kolon adı
-     * @param indexType indeks türü
-     * @param <K> indeks anahtar tipi
-     * @return oluşturulan indeks
+     * Yeni indeks oluşturur.
      */
     public <K extends Comparable<K>> Index<K> createIndex(
             String indexName,
@@ -59,88 +58,136 @@ public class IndexManager implements Serializable {
             String columnName,
             IndexType indexType
     ) {
-        validateName(indexName, "Index adı");
-        validateName(databaseName, "Veritabanı adı");
-        validateName(tableName, "Tablo adı");
-        validateName(columnName, "Kolon adı");
+
+        String normalizedIndexName =
+                IndexIdentifierValidator
+                        .validateIndexName(indexName);
+
+        String normalizedDatabaseName =
+                IndexIdentifierValidator
+                        .validateDatabaseName(databaseName);
+
+        String normalizedTableName =
+                IndexIdentifierValidator
+                        .validateTableName(tableName);
+
+        String normalizedColumnName =
+                IndexIdentifierValidator
+                        .validateColumnName(columnName);
 
         if (indexType == null) {
+
             throw new InvalidIndexException(
                     "Index türü null olamaz."
             );
         }
 
-        if (indexes.containsKey(indexName)) {
+        if (indexes.containsKey(
+                normalizedIndexName
+        )) {
+
             throw new DuplicateIndexException(
-                    "Aynı isimde bir index zaten mevcut: " + indexName
+                    "Aynı isimde bir index zaten mevcut: "
+                            + normalizedIndexName
             );
         }
 
-        long indexId = indexIdGenerator.getAndIncrement();
+        long indexId =
+                indexIdGenerator
+                        .getAndIncrement();
 
-        IndexMetadata metadata = new IndexMetadata(
-                indexId,
-                indexName,
-                databaseName,
-                tableName,
-                columnName,
-                indexType
+        IndexMetadata metadata =
+                new IndexMetadata(
+                        indexId,
+                        normalizedIndexName,
+                        normalizedDatabaseName,
+                        normalizedTableName,
+                        normalizedColumnName,
+                        indexType
+                );
+
+        Index<K> index =
+                new Index<>(metadata);
+
+        indexes.put(
+                normalizedIndexName,
+                index
         );
-
-        Index<K> index = new Index<>(metadata);
-        indexes.put(indexName, index);
 
         return index;
     }
 
     /**
-     * Hazır bir metadata nesnesi üzerinden indeks oluşturur.
-     *
-     * @param metadata indeks metadata bilgisi
-     * @param <K> indeks anahtar tipi
-     * @return oluşturulan indeks
+     * Hazır metadata üzerinden indeks oluşturur.
      */
     public <K extends Comparable<K>> Index<K> createIndex(
             IndexMetadata metadata
     ) {
-        if (metadata == null || !metadata.isValid()) {
+
+        if (metadata == null
+                || !metadata.isValid()) {
+
             throw new InvalidIndexException(
                     "Geçerli bir IndexMetadata sağlanmalıdır."
             );
         }
 
-        String indexName = metadata.getIndexName();
+        String normalizedIndexName =
+                IndexIdentifierValidator
+                        .validateIndexName(
+                                metadata.getIndexName()
+                        );
 
-        if (indexes.containsKey(indexName)) {
+        if (indexes.containsKey(
+                normalizedIndexName
+        )) {
+
             throw new DuplicateIndexException(
-                    "Aynı isimde bir index zaten mevcut: " + indexName
+                    "Aynı isimde bir index zaten mevcut: "
+                            + normalizedIndexName
             );
         }
 
-        Index<K> index = new Index<>(metadata);
-        indexes.put(indexName, index);
+        Index<K> index =
+                new Index<>(metadata);
+
+        indexes.put(
+                normalizedIndexName,
+                index
+        );
 
         indexIdGenerator.updateAndGet(
-                current -> Math.max(current, metadata.getIndexId() + 1)
+                current ->
+                        Math.max(
+                                current,
+                                metadata.getIndexId() + 1
+                        )
         );
 
         return index;
     }
 
     /**
-     * Belirtilen indeks adını siler.
-     *
-     * @param indexName silinecek indeks adı
-     * @return silinen indeks
+     * Belirtilen indeksi siler.
      */
-    public Index<?> dropIndex(String indexName) {
-        validateName(indexName, "Index adı");
+    public Index<?> dropIndex(
+            String indexName
+    ) {
 
-        Index<?> removedIndex = indexes.remove(indexName);
+        String normalizedIndexName =
+                IndexIdentifierValidator
+                        .validateIndexName(indexName);
+
+        Index<?> removedIndex =
+                indexes.remove(
+                        normalizedIndexName
+                );
 
         if (removedIndex == null) {
+
             throw new IndexNotFoundException(
-                    "Silinecek index bulunamadı: " + indexName
+                    "Silinecek index bulunamadı: "
+                            + normalizedIndexName
             );
         }
 
@@ -148,19 +195,26 @@ public class IndexManager implements Serializable {
     }
 
     /**
-     * Belirtilen indeks nesnesini döndürür.
-     *
-     * @param indexName indeks adı
-     * @return indeks nesnesi
+     * Belirtilen indeksi döndürür.
      */
-    public Index<?> getIndex(String indexName) {
-        validateName(indexName, "Index adı");
+    public Index<?> getIndex(
+            String indexName
+    ) {
 
-        Index<?> index = indexes.get(indexName);
+        String normalizedIndexName =
+                IndexIdentifierValidator
+                        .validateIndexName(indexName);
+
+        Index<?> index =
+                indexes.get(
+                        normalizedIndexName
+                );
 
         if (index == null) {
+
             throw new IndexNotFoundException(
-                    "Index bulunamadı: " + indexName
+                    "Index bulunamadı: "
+                            + normalizedIndexName
             );
         }
 
@@ -168,57 +222,81 @@ public class IndexManager implements Serializable {
     }
 
     /**
-     * Belirtilen anahtar tipinde indeks döndürür.
-     *
-     * <p>Java generic tür silme nedeniyle çalışma zamanında anahtar tipi
-     * doğrulanamaz. Yanlış tip kullanımı işlem sırasında hata oluşturabilir.</p>
+     * Generic tip ile indeks döndürür.
      */
     @SuppressWarnings("unchecked")
     public <K extends Comparable<K>> Index<K> getTypedIndex(
             String indexName
     ) {
-        return (Index<K>) getIndex(indexName);
+
+        return (Index<K>)
+                getIndex(indexName);
     }
 
     /**
-     * Bir indeksin kayıtlı olup olmadığını kontrol eder.
-     *
-     * @param indexName indeks adı
-     * @return indeks varsa true
+     * İndeksin mevcut olup olmadığını kontrol eder.
      */
-    public boolean indexExists(String indexName) {
-        if (indexName == null || indexName.isBlank()) {
+    public boolean indexExists(
+            String indexName
+    ) {
+
+        if (indexName == null
+                || indexName.isBlank()) {
+
             return false;
         }
 
-        return indexes.containsKey(indexName);
+        try {
+
+            String normalizedIndexName =
+                    IndexIdentifierValidator
+                            .validateIndexName(indexName);
+
+            return indexes.containsKey(
+                    normalizedIndexName
+            );
+
+        } catch (InvalidIndexException exception) {
+
+            return false;
+        }
     }
 
     /**
-     * Belirtilen veritabanı ve tabloya ait indeksleri listeler.
-     *
-     * @param databaseName veritabanı adı
-     * @param tableName tablo adı
-     * @return tabloya ait değiştirilemez indeks listesi
+     * Belirtilen tabloya ait indeksleri listeler.
      */
     public List<Index<?>> getIndexesForTable(
             String databaseName,
             String tableName
     ) {
-        validateName(databaseName, "Veritabanı adı");
-        validateName(tableName, "Tablo adı");
 
-        List<Index<?>> result = new ArrayList<>();
+        String normalizedDatabaseName =
+                IndexIdentifierValidator
+                        .validateDatabaseName(databaseName);
 
-        for (Index<?> index : indexes.values()) {
-            IndexMetadata metadata = index.getMetadata();
+        String normalizedTableName =
+                IndexIdentifierValidator
+                        .validateTableName(tableName);
 
-            if (metadata.belongsToTable(databaseName, tableName)) {
+        List<Index<?>> result =
+                new ArrayList<>();
+
+        for (Index<?> index
+                : indexes.values()) {
+
+            IndexMetadata metadata =
+                    index.getMetadata();
+
+            if (metadata.belongsToTable(
+                    normalizedDatabaseName,
+                    normalizedTableName
+            )) {
+
                 result.add(index);
             }
         }
 
-        return Collections.unmodifiableList(result);
+        return List.copyOf(result);
     }
 
     /**
@@ -229,80 +307,123 @@ public class IndexManager implements Serializable {
             String tableName,
             String columnName
     ) {
-        validateName(databaseName, "Veritabanı adı");
-        validateName(tableName, "Tablo adı");
-        validateName(columnName, "Kolon adı");
 
-        List<Index<?>> result = new ArrayList<>();
+        String normalizedDatabaseName =
+                IndexIdentifierValidator
+                        .validateDatabaseName(databaseName);
 
-        for (Index<?> index : indexes.values()) {
-            IndexMetadata metadata = index.getMetadata();
+        String normalizedTableName =
+                IndexIdentifierValidator
+                        .validateTableName(tableName);
 
-            if (metadata.belongsToTable(databaseName, tableName)
-                    && metadata.belongsToColumn(columnName)) {
+        String normalizedColumnName =
+                IndexIdentifierValidator
+                        .validateColumnName(columnName);
+
+        List<Index<?>> result =
+                new ArrayList<>();
+
+        for (Index<?> index
+                : indexes.values()) {
+
+            IndexMetadata metadata =
+                    index.getMetadata();
+
+            if (metadata.belongsToTable(
+                    normalizedDatabaseName,
+                    normalizedTableName
+            )
+                    && metadata.belongsToColumn(
+                    normalizedColumnName
+            )) {
+
                 result.add(index);
             }
         }
 
-        return Collections.unmodifiableList(result);
+        return List.copyOf(result);
     }
 
     /**
-     * Belirtilen indekse yeni anahtar ve pointer ekler.
+     * İndekse yeni kayıt ekler.
      */
     public <K extends Comparable<K>> void insertEntry(
             String indexName,
             K key,
             RecordPointer pointer
     ) {
-        Index<K> index = getTypedIndex(indexName);
-        index.insert(key, pointer);
+
+        Index<K> index =
+                getTypedIndex(indexName);
+
+        index.insert(
+                key,
+                pointer
+        );
     }
 
     /**
-     * Belirtilen indeks içerisinde anahtar arar.
+     * İndeks içerisinde anahtar arar.
      */
-    public <K extends Comparable<K>> List<RecordPointer> search(
+    public <K extends Comparable<K>>
+    List<RecordPointer> search(
             String indexName,
             K key
     ) {
-        Index<K> index = getTypedIndex(indexName);
+
+        Index<K> index =
+                getTypedIndex(indexName);
+
         return index.search(key);
     }
 
     /**
-     * Belirtilen indeksten anahtar ve bütün pointer ilişkilerini siler.
+     * Anahtarı ve tüm pointer ilişkilerini siler.
      */
-    public <K extends Comparable<K>> boolean deleteEntry(
+    public <K extends Comparable<K>>
+    boolean deleteEntry(
             String indexName,
             K key
     ) {
-        Index<K> index = getTypedIndex(indexName);
+
+        Index<K> index =
+                getTypedIndex(indexName);
+
         return index.remove(key);
     }
 
     /**
-     * Belirtilen anahtara bağlı tek bir pointer'ı siler.
+     * Belirli bir pointer ilişkisini siler.
      */
-    public <K extends Comparable<K>> boolean deleteEntry(
+    public <K extends Comparable<K>>
+    boolean deleteEntry(
             String indexName,
             K key,
             RecordPointer pointer
     ) {
-        Index<K> index = getTypedIndex(indexName);
-        return index.remove(key, pointer);
+
+        Index<K> index =
+                getTypedIndex(indexName);
+
+        return index.remove(
+                key,
+                pointer
+        );
     }
 
     /**
-     * Bir pointer bilgisini günceller.
+     * Pointer bilgisini günceller.
      */
-    public <K extends Comparable<K>> boolean updateEntry(
+    public <K extends Comparable<K>>
+    boolean updateEntry(
             String indexName,
             K key,
             RecordPointer oldPointer,
             RecordPointer newPointer
     ) {
-        Index<K> index = getTypedIndex(indexName);
+
+        Index<K> index =
+                getTypedIndex(indexName);
 
         return index.update(
                 key,
@@ -312,30 +433,27 @@ public class IndexManager implements Serializable {
     }
 
     /**
-     * Tüm indeksleri değiştirilemez bir harita olarak döndürür.
+     * Bütün indekslerin değiştirilemez kopyasını döndürür.
      */
     public Map<String, Index<?>> getAllIndexes() {
+
         return Collections.unmodifiableMap(
-                new LinkedHashMap<>(indexes)
+                new LinkedHashMap<>(
+                        indexes
+                )
         );
     }
 
-    /**
-     * Sistemde kayıtlı indeks sayısını döndürür.
-     */
     public int size() {
         return indexes.size();
     }
 
-    /**
-     * Hiç indeks bulunup bulunmadığını kontrol eder.
-     */
     public boolean isEmpty() {
         return indexes.isEmpty();
     }
 
     /**
-     * Bütün indeksleri temizler.
+     * Tüm indeksleri temizler.
      */
     public void clear() {
         indexes.clear();
@@ -344,45 +462,55 @@ public class IndexManager implements Serializable {
     /**
      * Belirtilen tabloya ait bütün indeksleri siler.
      *
-     * @return silinen indeks sayısı
+     * @return silinen index sayısı
      */
     public int dropIndexesForTable(
             String databaseName,
             String tableName
     ) {
-        validateName(databaseName, "Veritabanı adı");
-        validateName(tableName, "Tablo adı");
 
-        List<String> indexNamesToRemove = new ArrayList<>();
+        String normalizedDatabaseName =
+                IndexIdentifierValidator
+                        .validateDatabaseName(databaseName);
 
-        for (Map.Entry<String, Index<?>> entry : indexes.entrySet()) {
-            IndexMetadata metadata = entry.getValue().getMetadata();
+        String normalizedTableName =
+                IndexIdentifierValidator
+                        .validateTableName(tableName);
 
-            if (metadata.belongsToTable(databaseName, tableName)) {
-                indexNamesToRemove.add(entry.getKey());
+        List<String> indexNamesToRemove =
+                new ArrayList<>();
+
+        for (Map.Entry<String, Index<?>> entry
+                : indexes.entrySet()) {
+
+            IndexMetadata metadata =
+                    entry
+                            .getValue()
+                            .getMetadata();
+
+            if (metadata.belongsToTable(
+                    normalizedDatabaseName,
+                    normalizedTableName
+            )) {
+
+                indexNamesToRemove.add(
+                        entry.getKey()
+                );
             }
         }
 
-        for (String indexName : indexNamesToRemove) {
+        for (String indexName
+                : indexNamesToRemove) {
+
             indexes.remove(indexName);
         }
 
         return indexNamesToRemove.size();
     }
 
-    /**
-     * Metin parametrelerini doğrular.
-     */
-    private void validateName(String value, String fieldName) {
-        if (value == null || value.isBlank()) {
-            throw new InvalidIndexException(
-                    fieldName + " null veya boş olamaz."
-            );
-        }
-    }
-
     @Override
     public String toString() {
+
         return "IndexManager{" +
                 "indexCount=" + indexes.size() +
                 ", indexNames=" + indexes.keySet() +
@@ -391,6 +519,7 @@ public class IndexManager implements Serializable {
 
     @Override
     public boolean equals(Object object) {
+
         if (this == object) {
             return true;
         }
@@ -399,7 +528,10 @@ public class IndexManager implements Serializable {
             return false;
         }
 
-        return Objects.equals(indexes, that.indexes);
+        return Objects.equals(
+                indexes,
+                that.indexes
+        );
     }
 
     @Override
