@@ -3,8 +3,6 @@ package com.yekdb.table;
 import com.yekdb.table.exception.TableAlreadyExistsException;
 import com.yekdb.table.exception.TableNotFoundException;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -12,10 +10,11 @@ import java.util.Map;
 /**
  * YEKDB içerisindeki tablo kataloğunu yönetir.
  *
- * TableCatalog, aktif bir veritabanındaki tabloların
+ * TableCatalog aktif veritabanındaki tabloların
  * şema ve metadata bilgilerini bellekte tutar.
  *
- * Tablolar eklenme sırasına göre saklanır.
+ * LinkedHashMap kullanıldığı için tablolar kayıt
+ * sırasına göre saklanır.
  *
  * Sürüm: 1.0
  */
@@ -33,14 +32,15 @@ public class TableCatalog {
     }
 
     /**
-     * Kataloğa yeni bir tablo ve metadata bilgisi ekler.
+     * Kataloğa tablo ve metadata bilgisini kaydeder.
      *
-     * @param table    eklenecek tablo
+     * @param table    tablo
      * @param metadata tablo metadata bilgisi
-     * @throws IllegalArgumentException      tablo veya metadata null ise
-     * @throws TableAlreadyExistsException   aynı isimde tablo zaten varsa
      */
-    public void registerTable(Table table, TableMetadata metadata) {
+    public void registerTable(
+            Table table,
+            TableMetadata metadata
+    ) {
 
         if (table == null) {
             throw new IllegalArgumentException(
@@ -54,19 +54,28 @@ public class TableCatalog {
             );
         }
 
-        String tableName = normalizeTableName(table.getTableName());
+        String tableName =
+                TableNameValidator.validate(
+                        table.getTableName()
+                );
 
-        if (!tableName.equals(
-                normalizeTableName(metadata.getTableName())
-        )) {
+        String metadataTableName =
+                TableNameValidator.validate(
+                        metadata.getTableName()
+                );
+
+        if (!tableName.equals(metadataTableName)) {
             throw new IllegalArgumentException(
                     "Table name and metadata table name must match."
             );
         }
 
-        if (table.getColumnCount() != metadata.getColumnCount()) {
+        if (table.getColumnCount()
+                != metadata.getColumnCount()) {
+
             throw new IllegalArgumentException(
-                    "Table column count and metadata column count must match."
+                    "Table column count and metadata "
+                            + "column count must match."
             );
         }
 
@@ -81,17 +90,18 @@ public class TableCatalog {
     }
 
     /**
-     * Verilen isimdeki tabloyu katalogdan kaldırır.
+     * Verilen tabloyu katalogdan kaldırır.
      *
      * @param tableName tablo adı
      * @return kaldırılan tablo
-     * @throws TableNotFoundException tablo bulunamazsa
      */
     public Table unregisterTable(String tableName) {
 
-        String normalizedName = normalizeTableName(tableName);
+        String normalizedName =
+                TableNameValidator.validate(tableName);
 
-        Table removedTable = tables.remove(normalizedName);
+        Table removedTable =
+                tables.remove(normalizedName);
 
         if (removedTable == null) {
             throw new TableNotFoundException(
@@ -105,17 +115,18 @@ public class TableCatalog {
     }
 
     /**
-     * Verilen isimdeki tabloyu döndürür.
+     * Verilen tabloyu döndürür.
      *
      * @param tableName tablo adı
      * @return tablo
-     * @throws TableNotFoundException tablo bulunamazsa
      */
     public Table getTable(String tableName) {
 
-        String normalizedName = normalizeTableName(tableName);
+        String normalizedName =
+                TableNameValidator.validate(tableName);
 
-        Table table = tables.get(normalizedName);
+        Table table =
+                tables.get(normalizedName);
 
         if (table == null) {
             throw new TableNotFoundException(
@@ -130,18 +141,20 @@ public class TableCatalog {
      * Verilen tabloya ait metadata bilgisini döndürür.
      *
      * @param tableName tablo adı
-     * @return tablo metadata bilgisi
-     * @throws TableNotFoundException tablo bulunamazsa
+     * @return metadata
      */
     public TableMetadata getMetadata(String tableName) {
 
-        String normalizedName = normalizeTableName(tableName);
+        String normalizedName =
+                TableNameValidator.validate(tableName);
 
-        TableMetadata metadata = metadataEntries.get(normalizedName);
+        TableMetadata metadata =
+                metadataEntries.get(normalizedName);
 
         if (metadata == null) {
             throw new TableNotFoundException(
-                    "Table metadata not found: " + normalizedName
+                    "Table metadata not found: "
+                            + normalizedName
             );
         }
 
@@ -149,7 +162,7 @@ public class TableCatalog {
     }
 
     /**
-     * Verilen isimde bir tablo bulunup bulunmadığını kontrol eder.
+     * Verilen isimde tablo bulunup bulunmadığını kontrol eder.
      *
      * @param tableName tablo adı
      * @return tablo varsa true
@@ -160,39 +173,46 @@ public class TableCatalog {
             return false;
         }
 
-        return tables.containsKey(normalizeTableName(tableName));
+        try {
+            return tables.containsKey(
+                    TableNameValidator.validate(tableName)
+            );
+
+        } catch (IllegalArgumentException exception) {
+            return false;
+        }
     }
 
     /**
-     * Katalogdaki tabloların listesini döndürür.
+     * Katalogdaki tabloları kayıt sırasına göre döndürür.
      *
      * @return değiştirilemez tablo listesi
      */
     public List<Table> listTables() {
-        return Collections.unmodifiableList(
-                new ArrayList<>(tables.values())
+        return List.copyOf(
+                tables.values()
         );
     }
 
     /**
-     * Katalogdaki tablo adlarını döndürür.
+     * Katalogdaki tablo adlarını kayıt sırasına göre döndürür.
      *
      * @return değiştirilemez tablo adı listesi
      */
     public List<String> listTableNames() {
-        return Collections.unmodifiableList(
-                new ArrayList<>(tables.keySet())
+        return List.copyOf(
+                tables.keySet()
         );
     }
 
     /**
-     * Katalogdaki metadata bilgilerinin listesini döndürür.
+     * Katalogdaki metadata bilgilerini kayıt sırasına göre döndürür.
      *
      * @return değiştirilemez metadata listesi
      */
     public List<TableMetadata> listMetadata() {
-        return Collections.unmodifiableList(
-                new ArrayList<>(metadataEntries.values())
+        return List.copyOf(
+                metadataEntries.values()
         );
     }
 
@@ -215,27 +235,10 @@ public class TableCatalog {
     }
 
     /**
-     * Katalogdaki bütün tablo ve metadata bilgilerini temizler.
+     * Tüm tablo ve metadata kayıtlarını temizler.
      */
     public void clear() {
         tables.clear();
         metadataEntries.clear();
-    }
-
-    /**
-     * Tablo adını standart formata dönüştürür.
-     *
-     * @param tableName tablo adı
-     * @return normalize edilmiş tablo adı
-     */
-    private String normalizeTableName(String tableName) {
-
-        if (tableName == null || tableName.isBlank()) {
-            throw new IllegalArgumentException(
-                    "Table name cannot be null or blank."
-            );
-        }
-
-        return tableName.trim().toLowerCase();
     }
 }
